--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="form__item">
-        <div class="form__label"></div>
+        <div class="form__label">git pull origin master</div>
         <div class="rating rating_set">
             <div class="rating__body">
                 <div class="rating__active"></div>
